fixed alignment issues

--- a/style.css
+++ b/style.css
@@ -1,17 +1,36 @@
-body{
+body {
     background-color: rgb(248, 219, 103);
     position: relative;
 }
 
-.Female-image{
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+}
+
+.image-container {
+    flex-shrink: 0; 
+    margin-right: 20px; 
+}
+
+
+
+.Female-image {
     position: absolute;
     width: 400px;
     height: 300px;
     border-radius: 10%;
     top: 100px;
     left: 50px;
+    max-width: 100%; 
+    height: auto; 
 }
 
-.anchor-text{
-    left: 150px;
+.anchor-text {
+    /* Removed left: 150px; */
+    margin: 0;
 }
